--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -497,77 +497,77 @@
 
     <string name="app_started">başlatıldı</string>
     <string name="app_stopped">durduruldu</string>
-    <string name="as_date">As date</string>
-    <string name="as_week">As week</string>
-    <string name="modify_days_of_month">Modify days of months</string>
-    <string name="modify_months">Modify months</string>
-    <string name="action_content">Edit</string>
-    <string name="adjust_caret">Cursor</string>
-    <string name="caret_left">Cursor left shift</string>
-    <string name="caret_right">Cursor right shift</string>
-    <string name="action_set_variable">Set variable</string>
-    <string name="condition_variable">Variable</string>
-    <string name="show_value">Show variable</string>
-    <string name="action_adjust">Adjust</string>
-    <string name="scroll_speed">Scrolling speed of successive adjust</string>
-    <string name="input_expression">Input expression</string>
-    <string name="variable_name_hint">Variable name contains letters, numbers, _ and $, not start with number.</string>
-    <string name="variable_expression_hint" formatted="false"><![CDATA[Variable:\n  32 bit signed integer.\nSupported operators:\n  +, -, *, /, %, <<, >>, &, ^, |, ~, ++, --.\n  Same as C/C++/Java…\nExample:\n  (var + 1) % 2]]></string>
-    <string name="action_clipboard">Clipboard</string>
-    <string name="clip_history_size">Clipboard history size</string>
-    <string name="redo">Redo</string>
-    <string name="undo">Undo</string>
-    <string name="action_toast">Toast</string>
-    <string name="icon_color">Icon color</string>
-    <string name="user_not_supported">Current user is not supported!!!</string>
-    <string name="action_play_sound">Play sound</string>
-    <string name="action_vibrate">Vibrate</string>
+    <string name="as_date">Tarih olarak</string>
+    <string name="as_week">Hafta olarak</string>
+    <string name="modify_days_of_month">Ayların günlerini değiştir</string>
+    <string name="modify_months">Ayları değiştir</string>
+    <string name="action_content">Düzenle</string>
+    <string name="adjust_caret">İmleç</string>
+    <string name="caret_left">İmleç sol shift</string>
+    <string name="caret_right">İmleç sağ shift</string>
+    <string name="action_set_variable">Değişkeni ayarla</string>
+    <string name="condition_variable">Değişken</string>
+    <string name="show_value">Değişkeni göster</string>
+    <string name="action_adjust">Ayarla</string>
+    <string name="scroll_speed">Ardışık kaydırma hızını ayarla</string>
+    <string name="input_expression">Girdi ifadesi</string>
+    <string name="variable_name_hint">Değişken adında harfler, sayılar, _ ve $ bulunur, sayı ile başlamaz.</string>
+    <string name="variable_expression_hint" formatted="false"><![CDATA[Değişken:\n  32 bit imzalı tam sayı.\nDesteklenen işleçler:\n  +, -, *, /, %, <<, >>, &, ^, |, ~, ++, --.\n  C/C++/Java… ile aynı\nÖrneğin:\n  (var + 1) % 2]]></string>
+    <string name="action_clipboard">Pano</string>
+    <string name="clip_history_size">Pano geçmişi boyutu</string>
+    <string name="redo">Yinele</string>
+    <string name="undo">Geri al</string>
+    <string name="action_toast">Pencere</string>
+    <string name="icon_color">Simge rengi</string>
+    <string name="user_not_supported">Şu anki kullanıcı desteklenmiyor!!!</string>
+    <string name="action_play_sound">Ses çal</string>
+    <string name="action_vibrate">Titret</string>
     <string name="alarm">Alarm</string>
-    <string name="notification">Notification</string>
-    <string name="ringtone">Ringtone</string>
-    <string name="stop_play_sound">Stop play sound</string>
-    <string name="vibrate_duration">Vibrate duration</string>
-    <string name="repeat">Repeat</string>
-    <string name="play_once">Once</string>
-    <string name="action_floating_widget">Floating widget</string>
-    <string name="delete_all">Delete all</string>
-    <string name="invalid_widget">Invalid widget!</string>
-    <string name="widgets">Widgets</string>
-    <string name="select_floating_widget">Select floating widget</string>
-    <string name="save_clip_data">Save clipboard data</string>
-    <string name="gesture_pointer_modes">Gesture pointer modes</string>
-    <string name="mode_double_tap">Double tap mode</string>
-    <string name="mode_long_press">Long press mode</string>
-    <string name="mode_tap">Tap mode</string>
-    <string name="mode_transform">Transform mode</string>
-    <string name="export_as_command">Export as command</string>
-    <string name="variables">Variables</string>
-    <string name="allows_perform_by_broadcast">Allows perform by broadcast</string>
-    <string name="perform_by_broadcast_not_allowed">Perform by broadcast not allowed!</string>
-    <string name="tutorial_online">Tutorial online</string>
-    <string name="disable_gesture_on_keyguard">Disable gesture on keyguard</string>
-    <string name="slide_adjust_color">Slide adjust color</string>
-    <string name="disable_auto_brightness_when_brightness_adjusted">Disable auto brightness when brightness adjusted</string>
-    <string name="screenshot_fullscreen">Screenshot fullscreen</string>
-    <string name="screenshot_selected_region">Screenshot selected region</string>
-    <string name="effect_sound">Effect sound</string>
-    <string name="action_split_screen">Split screen</string>
-    <string name="black_theme">Black</string>
-    <string name="rotate_180">Rotate 180°</string>
-    <string name="rotate_270">Rotate -90°</string>
-    <string name="rotate_90">Rotate 90°</string>
-    <string name="rotate_seascape">Rotate to seascape</string>
-    <string name="rotate_upside_down">Rotate to upside down</string>
-    <string name="windows_not_focusable">Windows not focusable</string>
-    <string name="windows_not_focusable_hint">Windows(panels, drawers…) shows above soft keyboard, can not receive key event if set.</string>
-    <string name="action_game_mode">Game mode</string>
-    <string name="ignore_edges">Ignore edges</string>
-    <string name="intercept_keys">Intercept keys</string>
-    <string name="do_not_show_pen_toolbar_automatically">Do not show pen toolbar automatically</string>
-    <string name="do_not_show_pen_toolbar_automatically_hint">You can also show toolbar by tap with two fingers.</string>
-    <string name="nothing_copied">Nothing copied!</string>
-    <string name="action_universal_copy">Universal copy</string>
-    <string name="clipboard_color">Clipboard color</string>
+    <string name="notification">Bildirim</string>
+    <string name="ringtone">Zil sesi</string>
+    <string name="stop_play_sound">Çalma sesini durdur</string>
+    <string name="vibrate_duration">Titreşim süresi</string>
+    <string name="repeat">Tekrarla</string>
+    <string name="play_once">Bir kez</string>
+    <string name="action_floating_widget">Yüzen widget</string>
+    <string name="delete_all">Tümünü sil</string>
+    <string name="invalid_widget">Geçersiz widget!</string>
+    <string name="widgets">"Widget'lar"</string>
+    <string name="select_floating_widget">Yüzen widget seç</string>
+    <string name="save_clip_data">Pano verilerini kaydet</string>
+    <string name="gesture_pointer_modes">Hareket işaretçi modları</string>
+    <string name="mode_double_tap">Çift tıklama modu</string>
+    <string name="mode_long_press">Uzun basma modu</string>
+    <string name="mode_tap">Dokunma modu</string>
+    <string name="mode_transform">Dönüştürme modu</string>
+    <string name="export_as_command">Komut olarak dışa aktar</string>
+    <string name="variables">Değişkenler</string>
+    <string name="allows_perform_by_broadcast">Yayın yoluyla gerçekleştirilir</string>
+    <string name="perform_by_broadcast_not_allowed">Yayın yoluyla gerçekleştirilemez!</string>
+    <string name="tutorial_online">Çevrimiçi öğretici</string>
+    <string name="disable_gesture_on_keyguard">Tuş kilidinde hareketi devre dışı bırak</string>
+    <string name="slide_adjust_color">Sürgü ayarlama rengi</string>
+    <string name="disable_auto_brightness_when_brightness_adjusted">Parlaklık ayarlıyken otomatik parlaklığı devre dışı bırak</string>
+    <string name="screenshot_fullscreen">Tam ekran görüntüsü</string>
+    <string name="screenshot_selected_region">Kısmi ekran görüntüsü</string>
+    <string name="effect_sound">Efekt sesi</string>
+    <string name="action_split_screen">Bölünmüş ekran</string>
+    <string name="black_theme">Siyah</string>
+    <string name="rotate_180">180° döndür</string>
+    <string name="rotate_270">-90° döndür</string>
+    <string name="rotate_90">° döndür</string>
+    <string name="rotate_seascape">Deniz manzarasına döndür</string>
+    <string name="rotate_upside_down">Baş aşağı döndür</string>
+    <string name="windows_not_focusable">Pencereler odaklanabilir değil</string>
+    <string name="windows_not_focusable_hint">Pencereler(paneller, çekmeceler…) yazılımsal klavyenin üstünde gösterilir, ayarlanmışsa tuş etkinlikleri alınmaz.</string>
+    <string name="action_game_mode">Oyun modu</string>
+    <string name="ignore_edges">Kenarları yoksay</string>
+    <string name="intercept_keys">Tuşları önle</string>
+    <string name="do_not_show_pen_toolbar_automatically">Kalem araç çubuğunu otomatik olarak gösterme</string>
+    <string name="do_not_show_pen_toolbar_automatically_hint">Araç çubuğunu iki parmağınızla dokunarak da gösterebilirsiniz.</string>
+    <string name="nothing_copied">Hiçbir şey kopyalanmadı!</string>
+    <string name="action_universal_copy">Evrensel kopyalama</string>
+    <string name="clipboard_color">Pano rengi</string>
 
 
 </resources>
