--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -565,9 +565,23 @@
     <string name="intercept_keys">Tuşları önle</string>
     <string name="do_not_show_pen_toolbar_automatically">Kalem araç çubuğunu otomatik olarak gösterme</string>
     <string name="do_not_show_pen_toolbar_automatically_hint">Araç çubuğunu iki parmağınızla dokunarak da gösterebilirsiniz.</string>
-    <string name="nothing_copied">Hiçbir şey kopyalanmadı!</string>
+    <string name="nothing_fetched">Hiçbir şey kopyalanmadı!</string>
     <string name="action_universal_copy">Evrensel kopyalama</string>
     <string name="clipboard_color">Pano rengi</string>
 
+    <string name="pie_scale">Pie scale</string>
+    <string name="by_two_finger">Only by two finger</string>
+    <string name="floating_widget_timeout">Floating widget timeout</string>
+    <string name="settings_should_be_moved">Settings should be moved from /data/data/com.jozein… to /data/user_de/0/com.jozein…\\nPlease launch this app, and reboot/soft reboot.</string>
+    <string name="action_finish_activity">Finish activity</string>
+    <string name="input_method_menu">Input method menu</string>
+    <string name="last_input_method">Last input method</string>
+    <string name="action_abort">Abort</string>
+    <string name="action_repeat">Repeat</string>
+    <string name="command_request_root">Root access</string>
+    <string name="count">Count:</string>
+    <string name="enter_count">Enter repeat count</string>
+    <string name="not_need_to_exec_su_explicitly">Not need to call su explicitly if root access checked.</string>
+    <string name="panel_scale">Panel scale</string>
 
 </resources>
