--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -585,5 +585,9 @@
     <string name="panel_scale">Panel scale</string>
     <string name="action_media_control">Media control</string>
     <string name="action_media_play">Media play</string>
+    <string name="gesture_hold">Hold</string>
+    <string name="action_sub_gestures">Sub gestures</string>
+    <string name="mode_default">Default</string>
+    <string name="widget_hint">Long press and hold to move widget, double tap and swipe to resize widget, use two finger to hide it.</string>
 
 </resources>
