--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,6 +77,7 @@
     <string name="gesture_swipe_right">Swipe right</string>
     <string name="gesture_swipe_up">Swipe up</string>
     <string name="gesture_swipe_down">Swipe down</string>
+    <string name="gesture_hold">Hold</string>
 
     <!-- key actions -->
     <string name="key_click">Click</string>
@@ -179,6 +180,7 @@
     <string name="action_pie">Pie</string>
     <string name="action_slide_adjust">Slide adjust</string>
     <string name="action_gesture_pointer">Gesture pointer</string>
+    <string name="action_sub_gestures">Sub gestures</string>
     <string name="action_successive_adjust">Successive adjust</string>
     <string name="action_adjust">Adjust</string>
     <string name="action_app">App</string>
@@ -493,8 +495,8 @@
     <string name="notification_hint">Notification content</string>
     <string name="wifi_ssid">SSID</string>
     <string name="speech_hint">Text to speech</string>
-    <string name="speech_description">%t: time.\n%w: day of week.\n%d: date.\n%b: battery level.\nEmpty triggers stop speech.\nNote: Maybe you should install a engine for local language(e.g. Google text to speech engine).</string>
-    <string name="toast_description">%t: time.\n%w: day of week.\n%d: date.\n%b: battery level.</string>
+    <string name="speech_description">%t: time. %w: day of week. %d: date. %b: battery level. Empty triggers stop speech. Note: Maybe you should install a engine for local language(e.g. Google text to speech engine).</string>
+    <string name="toast_description">%t: time. %w: day of week. %d: date. %b: battery level.</string>
     <string name="command_hint">Shell command for developers only</string>
     <string name="command_on_system_process">Runs on system process</string>
     <string name="command_root_access">Root access</string>
@@ -574,6 +576,7 @@
     <string name="intercept_keys">Intercept keys</string>
     <string name="settings_should_be_moved">Settings should be moved from /data/data/com.jozein… to /data/user_de/0/com.jozein…\nPlease launch this app, and reboot/soft reboot.</string>
     <string name="count">Count:</string>
+    <string name="widget_hint">Long press and hold to move widget, double tap and swipe to resize widget, use two finger to hide it.</string>
 
     <!-- help -->
     <string name="help_how_to_set">How to set(click to learn):</string>
@@ -591,6 +594,7 @@
 
     <!-- untranslatable -->
     <string name="description" translatable="false">This module provides you Gesture control, Key control and other smart triggers. To trigger actions you want.</string>
+    <string name="mode_default">Default</string>
 
 </resources>
 
